Improved weather tool by using proper weather api.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=learning
 
-# Enter the open AI API key here
-spring.ai.openai.api-key=
+# Keys in environment variables for different apis
+# spring.ai.openai.api-key=Enter the open AI API key here
+# weather.api.key=Enter the weather API key here
 
 # PostgresSQL server configuration for vector database
 spring.datasource.url=jdbc:postgresql://localhost:5432/vector_db
